# Q-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  v0.0.19工具层可执行报告.html  v0.0.19工具层市场调研.html  会话重启记忆_2026-06-18.md  项目结构说明.html
memory/: ADR架构决策记录.md  临时记忆.md  对话记录.md  思维导图.md  思维导图数据.jsonl  技能工具注册清单.md  提问回答记录.md  本项目错误追踪.md  核心思想提取.md  编年史记忆.md  项目指导文件.md
memory/方案/: 方案_2026-06-20_1045_下拉框本地云端分组与气泡模型标签.md  方案_2026-06-21_1200_取消按钮接通ChatWorker_stop.md  方案_2026-06-29_1430_v0.0.19工具层市场调研.md  方案_2026-06-29_1530_v0.0.19工具层实化可执行报告.md  方案_2026-06-30_0746_v0.0.20编排层接通可执行报告.md  方案_2026-06-30_0900_v0.0.20编排层接通可执行报告_修订版.md
memory/设计规范/: MASTER.md
q_agent/: __init__.py  __main__.py  cli.py
q_agent/assets/: README.md
q_agent/llm/: __init__.py  base.py  local.py  ollama.py
q_agent/memory/: __init__.py  base.py  runtime.py
q_agent/orchestrator/: __init__.py  context.py  core.py  dispatcher.py  loop.py  persistence.py  planner.py  summary_worker.py  turn.py  types.py
q_agent/skills/: __init__.py  base.py  registry.py
q_agent/tools/: web.py  (+15 more)
scripts/: generate_icons.py  update_mindmap.py
tests/: conftest.py  test_llm_clients.py  test_llm_ollama.py  test_orchestrator_context.py  test_orchestrator_dispatcher.py  test_orchestrator_loop.py  test_orchestrator_persistence.py  test_orchestrator_summary_worker.py  test_orchestrator_turn.py  test_orchestrator_types.py  test_registry.py  test_safety.py  test_smoke.py  test_ui_chat_page.py  test_ui_hardware_monitor.py  test_ui_imports.py  test_ui_loading_dots.py  test_ui_toolbar.py
安装包/: README.md
(+55 files in other folders)
